<resources>
    <string name="app_name">NUT4Health</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_and_conditions">Terms and Conditions NUT4Health</string>
    <string name="terms_and_conditions_sam">Terms and Conditions SAMPhoto</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_uppercase">SIGN UP</string>
    <string name="acept_terms_and_conditions">I accept the </string>
    <string-array name="array_role">
        <item>Health Agent</item>
        <item>Health Service</item>
    </string-array>
    <string name="mandatory_field">Mandatory unfilled fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_matches">Password and confirm password does not match!!</string>
    <string name="password_length">Password length must have at least 8 character!!</string>
    <string name="incorrect_user_or_password">User or password incorrect</string>
    <string name="user_exist">That registered user already exists</string>
    <string name="error_terms_and_conditios">You must agree to terms and conditions</string>
    <string name="close_question">Click again to close</string>
    <string name="error_general_one">An unexpected eror ocurred.</string>
    <string name="error_general_two">Sorry for the inconvenience.</string>
    <string name="error_general_three">Restarting App...</string>
    <string name="profile">View and edit profile</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_surname">Edit your surname</string>
    <string name="edit_country">Edit your country</string>
    <string name="edit_password">Change your password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search...</string>
    <string name="sent_instructions_to_change_password">If you accept, we will send you the instructions to change the password.</string>
    <string name="sent_instructions_to_change_password_ok">Sent. Check your email. If you can not find it, look in the Spam folder</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="delete_account_first_question">Are you sure you want to delete the account?</string>
    <string name="delete_account_second_question">This removes all your data permanently, do you want to continue?</string>
    <string name="no_internet">Check your Internet Connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="showing">Showing</string>
    <string name="diagnosis_show">diagnosis</string>
    <string name="createDiagnosis">Create diagnosis</string>
    <string name="createContract">Create child diagnosis</string>
    <string name="createFEFAContract">Create FEFA diagnosis</string>
    <string name="profile_child">Child profile</string>
    <string name="profile_fefa">FEFA profile</string>
    <string name="next_step">Next</string>
    <string name="back_step">Back</string>
    <string name="complete_step"></string>
    <string name="first_step_title">Diagnosis</string>
    <string name="second_step_title">Child</string>
    <string name="third_step_title">Send</string>
    <string name="take_photo">Take photo</string>
    <string name="error_photo">You must indicate the brachial perimeter of the child\'s arm</string>
    <string name="error_child_data">You must enter child data</string>
    <string name="error_fingerprint_data">You must enter child fingerprint</string>
    <string name="error_not_gps_position">You must activate geolocalization</string>
    <string name="child_data">Information</string>
    <string name="name">Child\'s first name</string>
    <string name="surname">Child\'s surname</string>
    <string name="sex">Sex</string>
    <string name="brothers">Older siblings of the child</string>
    <string name="child_birthdate">Child\'s birthdate</string>
    <string name="tutor_birthdate">Mother\'s date of birth</string>
    <string name="tutor_birthdate_completed">Birthdate of the mother, father, or tutor</string>
    <string name="tutor">Full name</string>
    <string name="tutor_child">FEFA of the child</string>
    <string name="check_verification">FEFA authorizes the data collection of the minor</string>
    <string name="check_verification_fefa">Authorize the data collection</string>
    <string name="dni">Identification document of the child</string>
    <string name="dni_tutor">Identification document of the mother, father, or tutor</string>
    <string name="dni_fefa">Mother\'s identification document</string>
    <string name="contact_phone">Contact phone</string>
    <string name="medical_point">Health Service</string>
    <string name="location">Location</string>
    <string name="check_malnutrition">Check malnutrition</string>
    <string name="capture">Start diagnosis</string>
    <string name="points">points</string>
    <string name="your_position">You are here</string>
    <string name="registerContract">Registrar diagnóstico</string>
    <string name="select_medical">Selecciona el Servicio de Salud</string>
    <string name="hight">Hight (cm)</string>
    <string name="weight">Weight (Kg)</string>
    <string name="check_phone_number">Verify that the contact person number is valid/correct. To be sure, call this contact, or call yourself from the number itself / from the contact number</string>
    <string name="contracts">Diagnostics child</string>
    <string name="contracts_child">Diagnostics child</string>
    <string name="contracts_fefa">Diagnostics FEFA</string>
    <string name="ranking">Ranking</string>
    <string name="payments">Payments</string>
    <string name="report">Report</string>
    <string name="notifications">Notifications</string>
    <string name="map_diagnostics">Diagnostics map</string>
    <string name="contractDetail">Diagnosis patient</string>
    <string name="date">Date</string>
    <string-array name="array_status">
        <item>All</item>
        <item>Admitted</item>
        <item>NW</item>
        <item>MAM</item>
        <item>SAM</item>
        <item>Duplicated</item>
    </string-array>
    <string name="hintNameSearch">Name and/or surname</string>
    <string name="dateRange">Date range</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="ranking_detail">User detail</string>
    <string name="ranking_points">Points</string>
    <string name="ranking_position">Position</string>
    <string name="monthly_payment_text">Monthly payment</string>
    <string name="confirmation_text">Confirmed diagnosis</string>
    <string name="bonus_text">Diagnostics Bonus</string>
    <string-array name="array_status_payments">
        <item>All</item>
        <item>Monthly</item>
        <item>Diagnosis</item>
        <item>Confirmed</item>
    </string-array>
    <string name="status_created">Created</string>
    <string name="status_paid">Paid</string>
    <string name="status_cancel">Cancel</string>
    <string name="send_report">Send report</string>
    <string name="reportQuestion">Do you have any idea to improve the application? Do you want to report an error? \n\nLeave us your comments here</string>
    <string name="reportHint">Write here</string>
    <string name="reportSend">Report sent correctly</string>
    <string name="reportSendDescription">Thank you!! Soon we can contact you.</string>
    <string name="error_create_contract_server">You have previously diagnosed the child or have recently received treatment</string>
    <string name="near_me">Near me</string>
    <string name="not_refered">Not Refered</string>
    <string name="refered">Refered</string>
    <string name="admitted">Admitted</string>
    <string name="refered_not_validated">Refered not validated</string>
    <string name="duplicated">Duplicated</string>
    <string name="refered_absent">Refered absent</string>
    <string name="diagnosis_duplicated_7">Diagnosis created above. You must wait 7 days to be re-diagnosed</string>
    <string name="diagnosis_duplicated_30">Diagnosis created above. You must wait 30 days to be re-diagnosed</string>
    <string name="diagnosis_ok">Diagnosis created successfully</string>
    <string name="diagnosis_paying">That diagnosis is already in the payment phase. You must wait days to diagnose it again</string>
    <string name="diagnosis_updated">Diagnosis created previously. The data has been updated</string>
    <string name="diagnosis_to_pay">Malnutrition checked. Paying</string>
    <string name="diagnosis_finished">Diagnosis completed</string>
    <string name="contracts_exported_ok">Contracts exported successfully</string>
    <string name="contracts_exported_error">Contracts exported error</string>
    <string name="validate_diagnosis">Validate diagnosis</string>
    <string name="confirm_diagnosis">Confirm diagnosis</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_adn">&#xf170;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_ambulance">&#xf0f9;</string>
    <string name="fa_anchor">&#xf13d;</string>
    <string name="fa_android">&#xf17b;</string>
    <string name="fa_angellist">&#xf209;</string>
    <string name="fa_angle_double_down">&#xf103;</string>
    <string name="fa_angle_double_left">&#xf100;</string>
    <string name="fa_angle_double_right">&#xf101;</string>
    <string name="fa_angle_double_up">&#xf102;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_apple">&#xf179;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_area_chart">&#xf1fe;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_left">&#xf190;</string>
    <string name="fa_arrow_circle_o_right">&#xf18e;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_file">&#xf15b;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_trash">&#xf1f8;</string>
</resources>